add columns, description, destination, add routes send and received pix in user routes, in pix table
